--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-src/data/movies_metadata.csv
 src/local-cdn/
 
 # Byte-compiled / optimized / DLL files
@@ -130,3 +129,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# data
+src/data/
